k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selise-assessment-service
  labels:
    app: selise-assessment
spec:
  selector:
    app: selise-assessment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
