k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selise-assessment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "himu.seliseassessment.com"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: selise-assessment-service
            port:
              number: 80
